[gd_scene load_steps=3 format=3 uid="uid://3n07iol04w3k"]

[ext_resource type="Script" path="res://Projects/Ui/Strikes/strikes.gd" id="1_vvxx4"]
[ext_resource type="Texture2D" uid="uid://df5nguok56l50" path="res://Assets/UI/Strike/Strike(white).png" id="2_535fo"]

[node name="Strikes" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_vvxx4")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 0
offset_right = 110.0
offset_bottom = 40.0
scale = Vector2(2, 2)
theme_override_constants/separation = -30

[node name="Strike1" type="TextureRect" parent="HBoxContainer"]
texture_filter = 2
layout_mode = 2
texture = ExtResource("2_535fo")

[node name="Strike2" type="TextureRect" parent="HBoxContainer"]
texture_filter = 2
layout_mode = 2
texture = ExtResource("2_535fo")

[node name="Strike3" type="TextureRect" parent="HBoxContainer"]
texture_filter = 2
layout_mode = 2
texture = ExtResource("2_535fo")
